# DRIVE

./: README.md  carla_with_coppeliasim.sh  requirements.txt
Coppeliasim/src/nubot_msgs/: CMakeLists.txt
Coppeliasim/src/nubot_msgs/msg/: Hand_Ctrl.msg  innfosPub.msg
DRIVE/: human_feedback_windows.py  parameters.py  ppo.py  reward_functions.py  reward_model.py  run_eval.py  run_tensorboard.sh  train.py  train_reward_model.py  vae_common.py
DRIVE/CarlaEnv/: carla_lap_env.py  collect_data.py  hud.py  planner.py  wrappers.py
DRIVE/vae/: AE_code.py  VAE_code.py  learning.py  misc.py  models.py  models_tf.py  reconstructor.py  run_tensorboard.sh  test.py
Robcup_2022/ROS_Code/src/: 自主运动函数在ibr2600内.txt
Robcup_2022/ROS_Code/src/cc_3r_sim/: CMakeLists.txt
Robcup_2022/ROS_Code/src/cc_7rl3_joy/: CMakeLists.txt  package.xml
Robcup_2022/ROS_Code/src/cc_7rl3_joy_ver2/: CMakeLists.txt
Robcup_2022/ROS_Code/src/cc_7rl3_sim/: CMakeLists.txt
Robcup_2022/ROS_Code/src/cc_7rl3_sim_ver2/: CMakeLists.txt
Robcup_2022/ROS_Code/src/cobra_sim/: CMakeLists.txt
Robcup_2022/ROS_Code/tc_launch/: cobra_double.launch  joy.launch  r7_dual_arm_sim.launch  r7_s.launch  test_code.launch
Robcup_2022/TL_Code/: no_adm_liner.bag  r7_auto_sim(adm_save).cpp  r7_auto_sim(bijiao).cpp  skt2cmd（wtc）.cpp  无阻抗控制_圆弧运动.bag
Robcup_2022/TL_Code/ccexo2tc/: CMakeLists.txt  CMakeLists（主臂）.txt  CMakeLists（从臂）.txt  canthread.cpp  ftsensorPerceptron.cpp  ftsensorPerceptron.h  （示例）rafiki_single_test.cpp  （示例）teleope_homo_hetero.cpp  （示例）teleope_homo_hetero.h  （示例）timon_single_cc.cpp
Robcup_2022/TL_Code/src/innfos_control_7r/: CMakeLists.txt  package.xml
Robcup_2022/TL_Code/src/innfos_control_7r/include/: actuatorInterface.h  ftsensorPerceptron.h
Robcup_2022/TL_Code/src/innfos_control_7r/lib/linux_x86_64/: libxkf700_filter.so.5.1.2
Robcup_2022/TL_Code/src/innfos_control_7r/src/: ftsensorPerceptron.cpp  innfos_control_7r.cpp
(+85 files in other folders)
